docs(index.txt): adicionar membros
Adicionar seção contendo os membros do grupo.

chore: indentar o arquivo

--- a/002_documentacao/index.tex
+++ b/002_documentacao/index.tex
@@ -31,17 +31,26 @@
 \hypersetup{
   pdfauthor={Grupo 1},
   pdftitle={Problema C: Implementação de um interpretador feito em C++ para a arquitetura PicoQuickProcessor},
-   pdfkeywords={},
-   pdfsubject={},
-   pdfcreator={TeX Live 2025},
-   pdflang={English}}
+  pdfkeywords={},
+  pdfsubject={},
+  pdfcreator={TeX Live 2025},
+  pdflang={English}}
 \usepackage{calc} % Matemática em comandos.
 \makeatother\begin{document}
 
 \maketitle
-\tableofcontents \pagebreak\section{Introdução}
+\tableofcontents \pagebreak\section{Membros}
 
-Texto aqui.
+\center
+\begin{tabular}{ll}
+  Nome & Curso\\
+  \hline
+  Franciso & Ciência da Computação\\
+  Gabriel & Engenharia da Computação\\
+  Guilherme & Ciência da Computação\\
+  Rhuan Pablo & Engenharia da Computação\\
+  Vinicíus & Engenharia da Computação\\
+\end{tabular}
 
 \section{Referências}
 
