docs(index.tex): consertar a descrilçao do campo pc
"pc" na verdade é um acrônimo de "Program Count" (contagem de
programas), não "Processor Count".
Isso está definido no próprio documento do processo seletivo, mas eu
não tinha visto.

--- a/002_documentacao/index.tex
+++ b/002_documentacao/index.tex
@@ -93,7 +93,7 @@ Os registradores não estão organizados numa forma específica para eles, todav
 \begin{enumerate}
 \item \texttt{pc} (\texttt{uint16\_t})
   \begin{description}
-  \item Indica a quantidade de processos sendo executados pela CPU.
+  \item Indica a quantidade de programas (instruções) que o interpretador está processar.
   \end{description}
 \item \texttt{r[REG\_COUNT]} (\texttt{uint32\_t})
   \begin{description}
