--- a/002_documentacao/index.tex
+++ b/002_documentacao/index.tex
@@ -63,7 +63,12 @@
 
 \section{Introdução}
 
-Texto aqui.
+O problema escolhido pelo grupo foi o Problema C: Implementação de um interpretador feito em C/C++ para a arquitetura PicoQuickProcessor.
+
+Esse problema foi selecionado pois a maioria dos membros do grupo são calouros, que portanto não teriam tanta praticidade com Verilog.
+A linguagem escolhida foi C.
+
+Este documento consta como a entrada para o Problema A: Documentação e Avaliação.
 
 \section{Estruturas de Dados}
 
