--- a/002_documentacao/index.tex
+++ b/002_documentacao/index.tex
@@ -53,22 +53,22 @@
   \begin{tabular}{ll}
     Nome & Curso\\
     \hline
-    Franciso & Ciência da Computação\\
-    Gabriel & Engenharia da Computação\\
-    Guilherme & Ciência da Computação\\
-    Rhuan Pablo & Engenharia da Computação\\
-    Vinicíus & Engenharia da Computação\\
+    Franciso Passos dos Santos Alves & Ciência da Computação\\
+    Gabriel Santos de Souza & Engenharia da Computação\\
+    Guilherme Ferreira Amâncio & Ciência da Computação\\
+    Rhuan Pablo Silva Santos & Engenharia da Computação\\
+    João Vinicíus de Almeida Argolô & Engenharia da Computação\\
   \end{tabular}
 \end{center}
 
 \section{Introdução}
 
-O problema escolhido pelo grupo foi o Problema C: Implementação de um interpretador feito em C/C++ para a arquitetura PicoQuickProcessor.
+Esta documentação refere-se ao "Problema C" da documentação disponibilizada pela equipe da CORETECH para o processo seletivo (PSEL) a qual os membros responsáveis por este projeto estão participando.
 
-Esse problema foi selecionado pois a maioria dos membros do grupo são calouros, que portanto não teriam tanta praticidade com Verilog.
-A linguagem escolhida foi C.
+O objetivo do projeto a qual este arquivo irá documentar - assim como foi pedido na documentação do PSEL da coretech - é criar um simulador, em linguagem C/C++, capaz de reproduzir o comportamento de um processador 32 Bits como artifício para didática. Essa simulação será executada em um ambiente x86-64 e um arquivo contendo um código de máquina será oferecida como a entrada e, por intermédio do simulador projetado conforme as regras de arquitetura d o PicoQuick, gerará um relatório detalhado da execução e do estado final do sistema.
 
-Este documento consta como a entrada para o Problema A: Documentação e Avaliação.
+Esta documentação contará com informações técnicas valiosas de como cada átimo deste projeto funciona e assim servindo como material de apoio técnico-didático para disciplinas como arquitetura de computadores e sistemas operacionais.
+
 
 \section{Estruturas de Dados}
 
@@ -128,7 +128,6 @@ Texto aqui.
 
 \section{Decisões}
 
-Texto aqui.
 
 \section{Referências}
 
