--- a/002_documentacao/index.tex
+++ b/002_documentacao/index.tex
@@ -127,8 +127,9 @@ Texto aqui.
 Texto aqui.
 
 \section{Decisões}
+A primeira decisão que fora introduzida por Francisco Passos e aceita pelo grupo, estava na subdivisão da liderança em que aquele que se destacasse em alguma parte do projeto seria quem ditaria as ordens, seja de organização e/ou planejamento como um todo no seu setor de atuação do mesmo. Com este princípio em mente, O Gabriel ficou responsável pela liderança na documentação do projeto pois o mesmo já apresentava experiência com LaTeX. Já o Vinícios, ficou responsável pelo projeto por ser o mais "mão na massa" e já ter uma experiência acadêmica "de ouro" e, por fim, Francisco ficou responsável pelo GitHub e permanecendo com a responsabilidade de chefe de equipe analizando o desenvolvimento de todo o projeto.
 
-
+A segunda decisão foi a escolha da resolução do problema C. O principal motivo foi que todos do grupo já haviam tido experiência com a linguagem C e isso tornava o problema C como a escolha mais conveniente para os bons caminhos do grupo. Mesmo que algum membro não trabalhasse diretamente no simulador, o mesmo teria a capacidade de compreender as etapas de sua construção.
 \section{Referências}
 
 (JAKE BOX (ED.). \textbf{Perfect Emacs Org Mode Exports to LaTeX – Straightforward Emacs}. 7 Mar. 2021. Disponível em: <\url{https://www.youtube.com/watch?v=0qHloGTT8XE}>. Acesso em: 13 nov. 2024)
