docs(index.tex): usar em dash em vez de hífen
Usar em dashes (—) em vez de hífens pois é o elemento gramaticamente
correto para a ocasião.

--- a/002_documentacao/index.tex
+++ b/002_documentacao/index.tex
@@ -72,7 +72,7 @@
 
 Esta documentação refere-se ao ``Problema C'' da documentação disponibilizada pela equipe da CORETECH para o processo seletivo (PSEL) a qual os membros responsáveis por este projeto estão participando.
 
-O objetivo do projeto a qual este arquivo irá documentar - assim como foi pedido na documentação do PSEL da coretech - é criar um simulador, em linguagem C/C++, capaz de reproduzir o comportamento de um processador 32 Bits como artifício para didática. Essa simulação será executada em um ambiente x86-64 e um arquivo contendo um código de máquina será oferecida como a entrada e, por intermédio do simulador projetado conforme as regras de arquitetura d o PicoQuick, gerará um relatório detalhado da execução e do estado final do sistema.
+O objetivo do projeto a qual este arquivo irá documentar --- assim como foi pedido na documentação do PSEL da coretech --- é criar um simulador, em linguagem C/C++, capaz de reproduzir o comportamento de um processador 32 Bits como artifício para didática. Essa simulação será executada em um ambiente x86-64 e um arquivo contendo um código de máquina será oferecida como a entrada e, por intermédio do simulador projetado conforme as regras de arquitetura d o PicoQuick, gerará um relatório detalhado da execução e do estado final do sistema.
 
 Esta documentação contará com informações técnicas valiosas de como cada átimo deste projeto funciona e assim servindo como material de apoio técnico-didático para disciplinas como arquitetura de computadores e sistemas operacionais.
 
