docs(index.tex): consertar nome de francisco
Franciso -> Francisco

--- a/002_documentacao/index.tex
+++ b/002_documentacao/index.tex
@@ -61,7 +61,7 @@
   \begin{tabular}{ll}
     Nome & Curso\\
     \hline
-    Franciso Passos dos Santos Alves & Ciência da Computação\\
+    Francisco Passos dos Santos Alves & Ciência da Computação\\
     Gabriel Santos de Souza & Engenharia da Computação\\
     Guilherme Ferreira Amâncio & Ciência da Computação\\
     Rhuan Pablo Silva Santos & Engenharia da Computação\\
