--- a/002_documentacao/index.tex
+++ b/002_documentacao/index.tex
@@ -167,7 +167,7 @@ Os contra-tempos não se voltaram apenas ao projeto, como também à liderança 
 
 \section{Decisões}
 
-A primeira decisão, introduzida por Francisco Passos e aceita pelo grupo, consistiu na subdivisão da liderança, de modo que aquele que se destacasse em determinada parte do projeto seria o responsável por ditar as diretrizes de organização e/ou planejamento dentro de seu setor de atuação. Com esse princípio em mente, Gabriel ficou responsável pela liderança da documentação do projeto, visto que já possuía experiência com LaTeX. Vinícius, por sua vez, assumiu a liderança da execução prática do projeto, por ser o membro mais “mão na massa” e já possuir uma experiência acadêmica maior que os demais. Por fim, Francisco ficou encarregado por gerenciar o repositório no GitHub, mantendo-se como chefe de equipe e responsável por acompanhar o desenvolvimento geral do projeto tanto do software, como da documentação.
+A primeira decisão, introduzida por Francisco Passos e aceita pelo grupo, consistiu na subdivisão da liderança, de modo que aquele que se destacasse em determinada parte do projeto seria o responsável por ditar as diretrizes de organização e/ou planejamento dentro de seu setor de atuação. Com esse princípio em mente, Gabriel ficou responsável pela liderança da documentação do projeto, visto que já possuía experiência com \LaTeX. Vinícius, por sua vez, assumiu a liderança da execução prática do projeto, por ser o membro mais “mão na massa” e já possuir uma experiência acadêmica maior que os demais. Por fim, Francisco ficou encarregado por gerenciar o repositório no GitHub, mantendo-se como chefe de equipe e responsável por acompanhar o desenvolvimento geral do projeto tanto do software, como da documentação.
 
 A segunda decisão foi a escolha pela resolução do Problema C. O principal motivo foi o fato de que todos os integrantes do grupo já possuíam experiência com a linguagem C, o que tornava o Problema C a escolha mais conveniente para o bom andamento do projeto. Mesmo que algum membro não atuasse diretamente no simulador, teria ainda assim a capacidade de compreender as etapas de sua construção.
 
@@ -193,6 +193,6 @@ O código-fonte e demais arquivos do projeto estão disponíveis publicamente no
 
 \section{Referências}
 
-(JAKE BOX (ED.). \textbf{Perfect Emacs Org Mode Exports to LaTeX – Straightforward Emacs}. 7 Mar. 2021. Disponível em: <\url{https://www.youtube.com/watch?v=0qHloGTT8XE}>. Acesso em: 13 nov. 2024)
+(JAKE BOX (ED.). \textbf{Perfect Emacs Org Mode Exports to \LaTeX – Straightforward Emacs}. 7 Mar. 2021. Disponível em: <\url{https://www.youtube.com/watch?v=0qHloGTT8XE}>. Acesso em: 13 nov. 2024)
 
 \end{document}
