docs(index.tex): usar em dashes

--- a/002_documentacao/index.tex
+++ b/002_documentacao/index.tex
@@ -171,7 +171,7 @@ A primeira decisão, introduzida por Francisco Passos e aceita pelo grupo, consi
 
 A segunda decisão foi a escolha pela resolução do Problema C. O principal motivo foi o fato de que todos os integrantes do grupo já possuíam experiência com a linguagem C, o que tornava o Problema C a escolha mais conveniente para o bom andamento do projeto. Mesmo que algum membro não atuasse diretamente no simulador, teria ainda assim a capacidade de compreender as etapas de sua construção.
 
-Por fim, a terceira e última decisão, tomada por Vinícius — líder da execução do projeto —, dizia respeito à organização do código em C do pqp-interpreter. A estrutura do código foi elaborada de forma a ser o mais didática possível, com o desenvolvimento dividido em etapas bem definidas, o que contribuiu significativamente para a legibilidade e manutenção do projeto. Essa decisão representou um dos maiores desafios enfrentados, conforme mencionado na seção de desafios.
+Por fim, a terceira e última decisão, tomada por Vinícius —-- líder da execução do projeto —-- dizia respeito à organização do código em C do pqp-interpreter. A estrutura do código foi elaborada de forma a ser o mais didática possível, com o desenvolvimento dividido em etapas bem definidas, o que contribuiu significativamente para a legibilidade e manutenção do projeto. Essa decisão representou um dos maiores desafios enfrentados, conforme mencionado na seção de desafios.
 
 \section{Aprendizado como uma unidade}
 
