docs(index.tex): pdflang
English -> Brazilian Portuguese

--- a/002_documentacao/index.tex
+++ b/002_documentacao/index.tex
@@ -34,7 +34,7 @@
   pdfkeywords={},
   pdfsubject={},
   pdfcreator={TeX Live 2025},
-  pdflang={English}
+  pdflang={Brazilian Portuguese}
 }
 
 % Identificação.
