fix(index.tex): pdflang

--- a/002_documentacao/index.tex
+++ b/002_documentacao/index.tex
@@ -34,7 +34,7 @@
   pdfkeywords={},
   pdfsubject={},
   pdfcreator={TeX Live 2025},
-  pdflang={Brazilian Portuguese}
+  pdflang={pt-BR}
 }
 
 % Identificação.
